# tr4-assistant

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTEXT.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
data/seeds/: tr4_sources.txt
docs/: DEPLOY.md
frontend/: app.js  index.html  style.css
scripts/: chat_cli.py  gaps_report.py  injection_tests.py  reembed_migration.py  search_cli.py
src/tr4/: __init__.py  app.py  auth.py  budget.py  captcha.py  chat_groq.py  chunks.py  config.py  embeddings.py  gaps.py  guardrails.py  indexing.py  legal.py  rag.py  rate_limit.py  store.py
src/tr4/ingest/: __init__.py  docs.py  facebook_batch.py  relevance.py  web.py  whatsapp.py
src/tr4/jobs/: __init__.py  sync.py
src/tr4/prompts/: system.txt
